--- a/src/Nobetci.Web/Views/Admin/CreatePage.cshtml
+++ b/src/Nobetci.Web/Views/Admin/CreatePage.cshtml
@@ -43,8 +43,8 @@
             <div class="form-group">
                 <label class="form-label">Dil *</label>
                 <select name="Language" class="form-control">
-                    <option value="tr">🇹🇷 Türkçe</option>
-                    <option value="en">🇬🇧 İngilizce</option>
+                    <option value="tr">🇹🇷 @Localizer["Turkish"]</option>
+                    <option value="en">🇬🇧 @Localizer["English"]</option>
                 </select>
             </div>
             
