--- a/src/Nobetci.Web/Views/_ViewImports.cshtml
+++ b/src/Nobetci.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
-﻿@using Nobetci.Web
+@using Nobetci.Web
 @using Nobetci.Web.Models
 @using Nobetci.Web.Resources
 @using Microsoft.Extensions.Localization
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IStringLocalizer<SharedResource> Localizer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
