fix: Units include kaldÄ±rÄ±ldÄ±, Google auth kontrolÃ¼ eklendi - DB uyumsuzluk dÃ¼zeltmesi

--- a/src/Nobetci.Web/Views/Account/Login.cshtml
+++ b/src/Nobetci.Web/Views/Account/Login.cshtml
@@ -559,6 +559,8 @@
                 </button>
             </form>
             
+            @if (ViewData["GoogleEnabled"] is true)
+            {
             <!-- Google Login Button -->
             <div class="social-login">
                 <div class="divider">
@@ -576,6 +578,7 @@
                     </button>
                 </form>
             </div>
+            }
             
             <div class="form-footer">
                 <p>
